# percep_bot_os

./: .gitignore  AGENTS.md  config.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto-merge.yml  ci.yml
brain/: __init__.py  brain_decision_schema.py  fallback.py  mock_brain.py
docs/: acceptance_template.md  interface_contracts.md  lingbot_clip_semantic_map_design.md  module_framework_design.md  multi_agent_collaboration_workflow.md  reactive_navigation_design.md  simulation_acceptance_test_plan.md  test_matrix.md
integration/: __init__.py  sim_nav_runner.py
navigation_core/: __init__.py  obstacle_utils.py  reactive_navigator.py
percep_bot_os/: __init__.py  __main__.py
percep_bot_os/contracts/: data_types.py
percep_bot_os/framework/: bus.py  manager.py  module.py
percep_bot_os/framework/webui/: server.py
percep_bot_os/framework/webui/static/: index.html
percep_bot_os/modules/: hello.py
scripts/: verify.sh
sim/: __init__.py  scenarios.py  sim2d_robot.py  sim2d_sensor.py  sim2d_world.py
tests/: conftest.py
tests/integration/: test_sim_nav.py
tests/sim2d/: test_sim2d.py
tests/test_runner/: __init__.py  evidence_collector.py  run_l0l1.py
tests/unit/: test_brain_schema.py  test_contracts.py  test_evidence_collector.py  test_framework.py  test_navigation_core.py
