[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "percep_bot_os"
version = "0.1.0"
description = "机器人感知导航操作系统 - 非 ROS2 轻量模块框架"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = [
    "percep_bot_os*",
    "navigation_core*",
    "global_navigation*",
    "semantic_map*",
    "brain*",
    "exploration*",
    "map_store*",
    "integration*",
    "sim*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
